# plover_stats

./: MANIFEST.in  README.md  setup.cfg
plover_stats/: main.py  stats.py  stats.ui  stats_table_model.py  utils.py
plover_stats/resources/: resources.qrc
