[metadata]
name = plover_stats
version = 0.0.1
description = Reads your strokes logs and calculates some stats
long_description = file: README.md
long_description_content_type = text/markdown
author = Antonia Siu
author_email = hello@antoniasiu.co.uk
license = GNU General Public License v3 (GPLv3)
url = https://github.com/antistic/plover_stats
project_urls =
  Issues = https://github.com/antistic/plover_stats/issues
classifiers =
    Development Status :: 4 - Beta
    Environment :: Plugins
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
keywords = plover plover_plugin

[options]
zip_safe = True
python_requires = >=3.7
install_requires =
  plover[gui_qt]>=4.0.0.dev3
packages =
  plover_stats

[options.entry_points]
plover.gui.qt.tool =
  plover_stats = plover_stats.main:Stats
